k8s/11-mongo-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: stop-app
  labels:
    app: mongo
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
